# bachelor-thesis

./: bachelor_thesis.code-workspace
app/: CMakeLists.txt  arm-gcc-toolchain.cmake
app/bitmaps/: brightness.c  playButton.c  untzLogo.c
app/config/: ClockControlConfig.cpp  ClockControlConfig.h  DSIHostConfig.cpp  EXTIConfig.cpp  EXTIConfig.h  FT3267Config.cpp  FT3267Config.h  GPIOConfig.cpp  I2CConfig.cpp  I2CConfig.h  MFXSTM32L152Config.h  RaydiumRM67160Config.h  SysTickConfig.cpp  SysTickConfig.h  USARTConfig.cpp  USARTConfig.h
app/inc/: AppFrameBuffer.h  DSIHostConfig.h  FT3267Config.h  FrameBuffer.h  GPIOConfig.h  GPIOConfiguration.h  GUIObjectDescription.h  I2CConfig.h  InterruptDispatcher.h  LTDCConfig.h  MFXSTM32L152Config.h  Startup.h  SysTickConfig.h  USARTConfig.h  sysclock.h
app/linker/: STM32L4R9AIIx_FLASH.ld  STM32L4R9AIIx_FLASH_NOLOAD.ld
app/src/: AppFrameBuffer.cpp  FrameBuffer.cpp  GUIObjectDescription.cpp  InterruptDispatcher.cpp  LTDCConfig.cpp  MFXSTM32L152Config.cpp  RaydiumRM67160Config.cpp  Startup.cpp  main.c  syscalls.c  sysclock.c
bsp/: CMakeLists.txt
bsp/inc/: FT3267.h  MFXSTM32L152.h  RaydiumRM67160.h
bsp/mock/: FT3267Mock.h  MFXSTM32L152Mock.h
bsp/src/: FT3267.cpp  MFXSTM32L152.cpp  RaydiumRM67160.cpp
bsp/test/: FT3267Test.cpp  MFXSTM32L152Test.cpp  RaydiumRM67160Test.cpp
driver/: CMakeLists.txt
driver/inc/: ClockControl.h  CoreHardware.h  DMA2D.h  DSIHost.h  DriverManager.h  EXTI.h  FlashController.h  GPIO.h  I2C.h  InterruptController.h  LTDC.h  Peripheral.h  PowerControl.h  RCC.h  ResetControl.h  SysTick.h  SysTickTimer.h  SystemConfig.h  USART.h
driver/mock/: ClockControlMock.h  DMA2DMock.h  DSIHostMock.h  GPIOMock.h  I2CMock.h  ResetControlMock.h  SysTickMock.h  USARTMock.h
driver/sdk/: stm32l4r9xx.h
driver/src/: ClockControl.cpp  DMA2D.cpp  DSIHost.cpp  DriverManager.cpp  EXTI.cpp  FlashController.cpp  GPIO.cpp  I2C.cpp  InterruptController.cpp  LTDC.cpp  PowerControl.cpp  RCC.cpp  ResetControl.cpp  SysTick.cpp  SysTickTimer.cpp  SystemConfig.cpp  USART.cpp
driver/test/: ClockControlMock.h  ClockControlTest.cpp  DMA2DTest.cpp  DSIHostTest.cpp  DriverManagerTest.cpp  DriverTest.cpp  DriverTest.h  EXTITest.cpp  FlashControllerTest.cpp  GPIOTest.cpp  I2CTest.cpp  InterruptControllerTest.cpp  LTDCTest.cpp  PowerControlTest.cpp  RCCTest.cpp  ResetControlTest.cpp  SysTickTest.cpp  SysTickTimerTest.cpp  SystemConfigTest.cpp  USARTTest.cpp
module/: CMakeLists.txt
module/inc/: FT3267TouchDevice.h  FrameBuffer.h  GPIOManager.h  GUIBitmap.h  GUICommon.h  GUIContainer.h  GUIDrawPerformanceMeasurement.h  GUIImage.h  GUIRectangle.h  GUIRectangleBase.h  GUIScene.h  GUISceneBase.h  GUITouchController.h  GUITouchEvent.h  TouchEvent.h  USARTLogger.h
module/interface/: IFrameBuffer.h  IGUIContainer.h  IGUIDrawable.h  IGUIMovable.h  IGUIObject.h  IGUIObjectBase.h  IGUIObjectFwd.h  IGUIScene.h  IGUIShape.h  IGUITouchDevice.h  IGUITouchEventListener.h  IPerformanceMeasurement.h  IShape.h  ITouchDevice.h  ITouchEventListener.h
module/mock/: GUIContainerMock.h  GUIObjectMock.h  GUIRectangleBaseMock.h  GUITouchEventListenerMock.h  IGUIObjectMock.h  TouchEventListenerMock.h
module/src/: FT3267TouchDevice.cpp  GUIBitmap.cpp  GUIContainer.cpp  GUIDrawPerformanceMeasurement.cpp  GUIImage.cpp  GUIRectangle.cpp  GUIRectangleBase.cpp  GUISceneBase.cpp  GUITouchController.cpp  GUITouchEvent.cpp  TouchEvent.cpp  USARTLogger.cpp
module/test/: FT3267TouchDeviceTest.cpp  FrameBufferTest.cpp  GPIOManagerTest.cpp  GUIBitmapTest.cpp  GUICommonTest.cpp  GUIContainerTest.cpp  GUIDrawPerformanceMeasurementTest.cpp  GUIImageTest.cpp  GUIRectangleBaseTest.cpp  GUIRectangleTest.cpp  GUISceneBaseTest.cpp  GUISceneTest.cpp  GUITouchControllerTest.cpp  GUITouchEventTest.cpp  IFrameBufferTest.cpp  IGUIObjectTest.cpp  TouchEventTest.cpp  USARTLoggerTest.cpp
utility/: CMakeLists.txt
utility/inc/: ArrayList.h  MemoryAccess.h  MemoryAccessHook.h  MemoryUtility.h  RegisterUtility.h  StringBuilder.h
utility/interface/: IArrayList.h  IArrayListBase.h  IStringBuilder.h
utility/src/: MemoryAccess.cpp  MemoryUtility.cpp
utility/test/: ArrayListTest.cpp  MemoryAccessTest.cpp  MemoryUtilityTest.cpp  RegisterUtilityTest.cpp  StringBuilderTest.cpp
